--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-sx",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "main": "dist/vue-sx.umd.js",
   "module": "dist/vue-sx.es.js",
   "types": "dist/index.d.ts",
@@ -40,6 +40,8 @@
     "eslint-plugin-n": "^15.2.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^8.7.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-typescript2": "^0.31.2",
     "typescript": "^4.5.4",
     "vite": "^2.9.7",
     "vite-plugin-eslint": "^1.6.0",
